--- a/index.html
+++ b/index.html
@@ -7,9 +7,64 @@
 
     <!--Link your stylesheet here-->
 
-    <title>Document</title>
+    <title>The Watering Can</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">
+                <img src="images/logo.png" alt="logo for the watering can">
+                <div class="links">
+                    <a href="#top">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#shop">Shop</a>
+                    <a href="">Contact</a>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <section id="top">
+        <div>
+            <h1>The Watering Can</h1>
+            <button>Shop Out Indoor Plant Sale</button>
+        </div>
+    </section>
+    <section id="about">
+        <div>
+            <h2>Our Story</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique nulla tempora nihil, eos necessitatibus, exercitationem eius repudiandae laudantium maxime ab qui iure rem aut quas, mollitia quo aperiam velit veritatis.</p>
+        </div>
+    </section>
+    <section id="shop">
+        <h2>Our Plants</h2>
+        <div class="wrapper">
+            <div class="shop-bg succulants"></div>
+            <div class="text">
+                <div>
+                    <h3>Succulants</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat adipisci deserunt voluptate atque aperiam veniam rem nostrum quis id nulla vero iste tempora, officiis, ratione dolor provident voluptatum, dicta impedit!</p>
+                    <button>Shop Now!</button>
+                </div>
+            </div>
+        </div>
+        <div class="wrapper">
+            <div class="text">
+                <h3>Cacti</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto natus deleniti omnis provident, aliquam ullam, iste incidunt error autem animi repellendus mollitia fuga atque saepe. Molestiae inventore quae iste necessitatibus.</p>
+                <button>Shop Now!</button>
+            </div>
+            <div class="shop-bg cacti"> </div>
+        </div>
+        <div class="wrapper">
+            <div class="shop-bg tropicals"></div>
+            <div class="text">
+                <div>
+                    <h3>Tropicals</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur ab, necessitatibus molestiae doloremque voluptate ratione eligendi, rerum, dolores repudiandae est consectetur! Numquam nihil cumque possimus ducimus ullam expedita consequuntur laborum?</p>
+                    <button>Shop Now!</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
